Fix contrast for WCAG

--- a/client/src/pages/ProfilePage/UserProfile/UserProfile.module.css
+++ b/client/src/pages/ProfilePage/UserProfile/UserProfile.module.css
@@ -56,7 +56,7 @@
 
 .profession {
   font-weight: 600;
-  color: var(--grey-400);
+  color: var(--grey-500);
 }
 
 .infoItem {
